<resources>
    <string name="app_name">Foode Restaurant</string>
    <string name="permissionMessage">Allow Permissions</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="pleaseWait">Please Wait</string>
    <string name="login">Login</string>
    <string name="mobile_number">Mobile number</string>
    <string name="password">Password</string>
    <string name="signin">Sign in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="email">E-Mail Address</string>
    <string name="errorInternet">Please check your internet connection</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>