<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context="com.foode.restaurant.activities.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_color"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <ImageView
            android:id="@+id/back_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:src="@drawable/ic_back"
            android:visibility="gone" />

        <!--   App Icon Image-->

        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/login"
            android:src="@drawable/logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/app_logo"
            android:layout_gravity="bottom"
            android:layout_margin="@dimen/text_margin"
            android:gravity="bottom"
            android:orientation="vertical">

            <!--  Login Layout-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_size"
                    android:background="@drawable/shadow_view">

                    <EditText
                        android:id="@+id/etEmailAddress"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentBottom="true"
                        android:background="@null"
                        android:hint="@string/email"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:paddingEnd="@dimen/_10sdp"
                        android:paddingStart="@dimen/_10sdp"
                        android:textSize="@dimen/text_normal" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp">

                    <EditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/edit_text_size"
                        android:background="@drawable/shadow_view"
                        android:drawablePadding="@dimen/_8sdp"
                        android:hint="@string/password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:paddingEnd="@dimen/_8sdp"
                        android:paddingStart="@dimen/_8sdp"
                        android:textSize="@dimen/text_normal"
                        app:theme="@style/MyEditTextTheme" />

                    <ImageView
                        android:id="@+id/ivPassword"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:src="@drawable/ic_eye_open"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="@dimen/_8sdp" />

                </RelativeLayout>

                <Button
                    android:id="@+id/btnSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/signin"
                    android:textColor="@color/colorWhite" />


                <RelativeLayout

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="20dp"
                    android:gravity="right"
                    android:orientation="horizontal">

                    <TextView
                        android:visibility="gone"
                        android:gravity="right"
                        android:id="@+id/tvForgotPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:text="@string/forgot_password"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/text_small"
                        android:layout_alignParentRight="true" />

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>